# easy-vocab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  MCP_SETUP.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  manage.py  mcp_server.py  pyproject.toml  requirements-ci.txt  requirements.txt  ruff.toml  setup.cfg
.github/workflows/: deploy.yml
app/: main.py
app/api/: deps.py
app/api/endpoints/: auth.py  pages.py  words.py
app/core/: config.py  database.py  security.py
app/models/: user.py  word.py
app/repositories/: __init__.py  user.py  word.py
app/schemas/: __init__.py  llm.py  word.py
app/services/: genai_service.py
app/static/css/: cards.css
app/static/js/: api.js  card-renderer.js  shared.js
app/templates/: flashcards.html  idioms.html  index.html  login.html  phrasal_verbs.html  quiz.html  quiz_translate.html
mcp_service/: client.py  server.py
migrations/: env.py  script.py.mako
migrations/versions/: 20260121_0001_initial.py
scripts/: start-web.sh
static/css/: cards.css
static/js/: card-renderer.js  shared.js
templates/: flashcards.html  idioms.html  index.html  login.html  phrasal_verbs.html  quiz.html  quiz_translate.html
tests/: conftest.py  test_api_words.py  test_auth.py  test_genai_service.py  test_mcp_server.py  test_pages.py  test_security.py  test_word_repository.py
traefik/: dynamic_conf.yaml  traefik.yaml
