[project]
name = "EasyVocab"
version = "0.1.0"
description = "EasyVocab - interactive web application for learning vocabulary"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "bcrypt==4.0.1",
    "click>=8.3.1",
    "fastapi==0.128.0",
    "fastmcp==2.14.3",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "openai==2.15.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary==2.9.11",
    "pydantic-settings==2.12.0",
    "pytest==9.0.2",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "requests==2.32.5",
    "ruff==0.14.13",
    "sqlalchemy==2.0.45",
    "sqlmodel==0.0.31",
    "uvicorn==0.40.0",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
allow_redefinition = true
warn_no_return = false
check_untyped_defs = false
disallow_untyped_defs = true
warn_unused_ignores = true
follow_imports = "skip"
strict_optional = true
exclude = [
    '^.ve/',
    '^env/',
    '^logs/',
]

[tool.pytest.ini_options]
norecursedirs = [".ve"]
addopts = "-ra -q -s -v"

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pre-commit==4.5.1",
]
